@@ -324,6 +324,24 @@
 </tr>
 </table>
 
+<h4>Add meta entry</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">field added</td>
+	<td class="tdchange">
+		<ul>
+			<li>.components.schemas."v0.0.38_diag".properties.meta</li>
+			<li>.components.schemas."v0.0.38_pings".properties.meta</li>
+			<li>.components.schemas."v0.0.38_partitions_response".properties.meta</li>
+			<li>.components.schemas."v0.0.38_reservations_response".properties.meta</li>
+			<li>.components.schemas."v0.0.38_job_submission_response".properties.meta</li>
+			<li>.components.schemas."v0.0.38_jobs_response".properties.meta</li>
+			<li>.components.schemas."v0.0.38_nodes_response".properties.meta</li>
+		</ul>
+	</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.35 (src/plugins/openapi/v0.0.35/openapi.json)</h3>
 
 <h4>Removal notice</h4>
